Fixed an issue with the z-index while cropping.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@ canvas {
   position: absolute;
   touch-action: none;
   width: 100%;
+}
+
+canvas[data-state=cropping] {
   z-index: 1;
 }
 
